feat: add basic structure

--- a/.gitignore
+++ b/.gitignore
@@ -2,21 +2,21 @@
 /dist
 /node_modules
 
+# environments
+environments/.env
+!environments/.env.dist
+
 # Logs
 logs
 *.log
 npm-debug.log*
-pnpm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
 # OS
 .DS_Store
-
-# Tests
-/coverage
-/.nyc_output
+.directory
 
 # IDEs and editors
 /.idea
