--- a/environments/.env.dist
+++ b/environments/.env.dist
@@ -1,6 +1,6 @@
 # Application
 
-APP_NAME                        = <Application name>                                # Team Project
+APP_NAME                        = <Application name>                                # FoodApp
 PORT                            = <Application port>                                # 4000
 
 APP_CLIENT_URL                  = <Frontend url>                                    # http://localhost:3000
@@ -11,13 +11,13 @@ POSTGRES_HOST                   = <Database host>                               
 POSTGRES_PORT                   = <Database port>                                   # 5432
 POSTGRES_USER                   = <Database username>                               # postgres
 POSTGRES_PASSWORD               = <Database password>                               # root
-POSTGRES_DB_NAME                = <Database name>                                   # hoque
+POSTGRES_DB_NAME                = <Database name>                                   # food
+POSTGRES_INIT_DB_NAME           = <Database name>                                   # postgres
 
 # User security
 
-JWT_ACCESS_EXPIRES_IN           = <JWT access token expires in (1m | 1h | 1d)>
-JWT_REFRESH_EXPIRES_IN          = <JWT refresh token expires in (1m | 1h | 1d)>
-JWT_ACCESS_ALGORITHM            = <JWT access token algorithm>
-JWT_REFRESH_ALGORITHM           = <JWT refresh token algorithm>
-ENCODE_ALGORITHM                = <Algorithm for password encoding>
-ENCODE_SALT                     = <Salt for password encoding>
+JWT_ACCESS_EXPIRES_IN           = <JWT access token expires in (1m | 1h | 1d)>      # 1h
+JWT_REFRESH_EXPIRES_IN          = <JWT refresh token expires in (1m | 1h | 1d)>     # 1d
+JWT_SECRET                      = <JWT secret>                                      # secret
+JWT_REFRESH_SECRET              = <JWT refresh secret>                              # refresh secret
+ENCODE_SALT                     = <Salt for password encoding>                      # 10
