--- a/package.json
+++ b/package.json
@@ -17,7 +17,13 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --color",
     "lint:fix": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix --color",
     "format": "prettier --write \"src/**/*.ts\"",
-    "----------------------migration--------------------": ""
+    "----------------------migration--------------------": "",
+    "typeorm": "typeorm-ts-node-esm",
+    "db:init": "npm run typeorm migration:run -- -d ./bin/scripts/init-data-source.ts",
+    "migration:create": "npm run typeorm migration:create",
+    "migration:generate": "npm run typeorm migration:generate -- -d ./ormconfig.ts",
+    "migration:up": "npm run typeorm migration:run -- -d ./ormconfig.ts",
+    "migration:down": "npm run typeorm migration:revert -- -d ./ormconfig.ts"
   },
   "dependencies": {
     "@nestjs/common": "^9.3.12",
