--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.0",
     "socket.io": "^4.6.1",
+    "stripe": "^12.0.0",
     "typeorm": "^0.3.12"
   },
   "devDependencies": {
